css/style.css
.canvas-holder {
    /* Prevents text selection */
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.game-canvas {
    border: 0px solid;
}

.container {
    position: relative;
}

.child {
    position: absolute;
    width: 100%;
    height: 100%;
}

#tanks-ui {
    transition: left 0.1s 0.1s ease-out;
}

/* Tanks Menu classes */

.tanks-ui-menu-button {
    width: 100%;
    font-size: 2.5em;
    letter-spacing: 0.6em;
    font-variant-caps: small-caps;
    text-transform: uppercase;
}

.tanks-ui-menu-title {
    font-size: 18vmin;
    font-family: 'Gloria Hallelujah', cursive;
    letter-spacing: 0.1em;
    font-weight: 700;
    padding-bottom: 64px;
    text-decoration: none;
}

